--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
 	    <groupId>com.github.Scottkellett</groupId>
 	    <artifactId>Ct417-part-a-</artifactId>
-	    <version>master-SNAPSHOT</version>
+	    <version>-SNAPSHOT</version>
 	</dependency>
     </dependencies>
     
